# endee

./: .gitignore
endee-rag-assistant/: .gitignore  ONE_PAGER_ENDEE.md  README.md  main.py  pyproject.toml  requirements.txt
endee-rag-assistant/app/: __init__.py  config.py  main.py  schemas.py
endee-rag-assistant/app/database/: endee_client.py
endee-rag-assistant/app/services/: embedding_service.py  ingestion_service.py  rag_service.py  retrieval_service.py  vector_store_service.py
endee-rag-assistant/app/utils/: pdf_loader.py  text_chunker.py
endee-rag-assistant/frontend/: streamlit_app.py
